--- a/index_mod.html
+++ b/index_mod.html
@@ -43,26 +43,10 @@
                                 <label for="date">Enter Date</label>
                                 <input type="text" placeholder="1/10/2010" id="datetime" />
                             </li>
-                            <li class="list-group-item bg-dark">
-                                <label for="city">Enter a City</label>
-                                <input type="text" placeholder="round rock" id="city" />
-                            </li>
-                            <li class="list-group-item bg-dark">
-                                <label for="state">Enter a State</label>
-                                <input type="text" placeholder="tx" id="state" />
-                            </li>
-                            <li class="list-group-item bg-dark">
-                                <label for="country">Enter a Country</label>
-                                <input type="text" placeholder="us" id="country" />
-                            </li>
-                            <li class="list-group-item bg-dark">
-                                <label for="shape">Enter a Shape</label>
-                                <input type="text" placeholder="circle" id="shape" />
-                            </li>
 
-                            <!-- <li class="list-group-item bg-dark">
+                            <li class="list-group-item bg-dark">
                                 <button id="filter-btn" type="button" class="btn btn-dark">Filter Table</button>
-                            </li> -->
+                            </li>
                         </ul>
                     </form>
                 </div>
@@ -88,6 +72,6 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
     <script src="static/js/data.js"></script>
-    <script src="static/js/app.js"></script>
+    <script src="static/js/mod_app.js"></script>
 </body>
 </html>
